Continued fix of button alignment issue

--- a/src/client/test.css
+++ b/src/client/test.css
@@ -12,23 +12,25 @@ p{
 }
 
 .nav-container{
-	display:grid;
-	grid-template-columns: 30% auto;
-	grid-template-rows: auto;
-
+	display:flex;
+	flex-direction:row;
+	flex-wrap:nowrap;
+	
 	position:fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-
+	
 	background-color: black;
 }
 .nav-content{
+	flex: 1 1 75%;
 	border: none;
 	position: relative;
 }
 .nav-sidebar{
+	flex: 1 1 25%;
 	background-color: #383838;
 	position: relative;
 }
